--- a/ui/mainui.ui
+++ b/ui/mainui.ui
@@ -110,11 +110,17 @@
        </layout>
       </item>
       <item>
-       <widget class="QSplitter" name="splitter_2">
+       <widget class="QSplitter" name="verticalSplitter">
+        <property name="layoutDirection">
+         <enum>Qt::RightToLeft</enum>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <widget class="QSplitter" name="splitter">
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -202,17 +208,6 @@
            </attribute>
           </widget>
          </widget>
-        </widget>
-        <widget class="QGraphicsView" name="graphicsView">
-         <property name="backgroundBrush">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>0</red>
-            <green>0</green>
-            <blue>0</blue>
-           </color>
-          </brush>
-         </property>
         </widget>
        </widget>
       </item>
