--- a/ui/mainui.ui
+++ b/ui/mainui.ui
@@ -60,7 +60,7 @@
              <enum>Qt::LeftToRight</enum>
             </property>
             <property name="currentIndex">
-             <number>2</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="tab">
              <attribute name="title">
@@ -114,6 +114,9 @@
               </item>
               <item row="1" column="0">
                <widget class="QPushButton" name="pushButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="text">
                  <string>Save chirp</string>
                 </property>
@@ -126,6 +129,9 @@
               </item>
               <item row="1" column="1">
                <widget class="QPushButton" name="pushButton_2">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="text">
                  <string>Save plot</string>
                 </property>
@@ -145,6 +151,9 @@
              <layout class="QGridLayout" name="gridLayout_4">
               <item row="1" column="0">
                <widget class="QPushButton" name="pushButton_3">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="text">
                  <string>Save data</string>
                 </property>
@@ -157,6 +166,9 @@
               </item>
               <item row="1" column="1">
                <widget class="QPushButton" name="pushButton_4">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="text">
                  <string>Save plot</string>
                 </property>
@@ -249,41 +261,9 @@
            </sizepolicy>
           </property>
           <property name="title">
-           <string>Frequency settings</string>
+           <string>Receiver settings</string>
           </property>
           <layout class="QFormLayout" name="formLayout">
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_11">
-             <property name="text">
-              <string>Offset</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="sbIFFreq">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-             <property name="suffix">
-              <string> Hz</string>
-             </property>
-             <property name="minimum">
-              <number>-2000000000</number>
-             </property>
-             <property name="maximum">
-              <number>2000000000</number>
-             </property>
-             <property name="value">
-              <number>1000</number>
-             </property>
-            </widget>
-           </item>
            <item row="0" column="0" colspan="2">
             <widget class="QSpinBox" name="sbRXFreq">
              <property name="sizePolicy">
@@ -373,6 +353,77 @@
              </property>
              <property name="value">
               <number>143049000</number>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_11">
+             <property name="text">
+              <string>Offset</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QSpinBox" name="sbIFFreq">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="suffix">
+              <string> Hz</string>
+             </property>
+             <property name="minimum">
+              <number>-2000000000</number>
+             </property>
+             <property name="maximum">
+              <number>2000000000</number>
+             </property>
+             <property name="value">
+              <number>1000</number>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0" colspan="2">
+            <widget class="QCheckBox" name="checkBox">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Throttle</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_12">
+             <property name="text">
+              <string>Rate</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QSpinBox" name="spinBox">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="suffix">
+              <string> sps</string>
+             </property>
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>1000000</number>
+             </property>
+             <property name="value">
+              <number>250000</number>
              </property>
             </widget>
            </item>
@@ -638,9 +689,35 @@
     <addaction name="actionCapture"/>
     <addaction name="actionStop_capture"/>
     <addaction name="separator"/>
+   </widget>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionSave"/>
+    <addaction name="actionSave_all"/>
+    <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
+   <widget class="QMenu" name="menuDetector">
+    <property name="title">
+     <string>Detector</string>
+    </property>
+    <addaction name="actionReset_time"/>
+    <addaction name="actionReset_detector"/>
+    <addaction name="separator"/>
+    <addaction name="actionClear_all"/>
+   </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout_QStones"/>
+   </widget>
+   <addaction name="menuFile"/>
    <addaction name="menu_Device"/>
+   <addaction name="menuDetector"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -649,14 +726,21 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionSave"/>
+   <addaction name="actionSave_all"/>
+   <addaction name="separator"/>
    <addaction name="actionSetup"/>
    <addaction name="actionCapture"/>
    <addaction name="actionStop_capture"/>
+   <addaction name="separator"/>
+   <addaction name="actionReset_time"/>
+   <addaction name="actionReset_detector"/>
+   <addaction name="actionClear_all"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionSetup">
    <property name="icon">
-    <iconset resource="../icons/oxygen.qrc">
+    <iconset resource="../icons/resources.qrc">
      <normaloff>:/themes/oxygen/22x22/devices/audio-card.png</normaloff>:/themes/oxygen/22x22/devices/audio-card.png</iconset>
    </property>
    <property name="text">
@@ -668,7 +752,7 @@
   </action>
   <action name="actionCapture">
    <property name="icon">
-    <iconset resource="../icons/oxygen.qrc">
+    <iconset resource="../icons/resources.qrc">
      <normaloff>:/themes/oxygen/22x22/actions/media-playback-start.png</normaloff>:/themes/oxygen/22x22/actions/media-playback-start.png</iconset>
    </property>
    <property name="text">
@@ -677,7 +761,7 @@
   </action>
   <action name="actionStop_capture">
    <property name="icon">
-    <iconset resource="../icons/oxygen.qrc">
+    <iconset resource="../icons/resources.qrc">
      <normaloff>:/themes/oxygen/22x22/actions/media-playback-stop.png</normaloff>:/themes/oxygen/22x22/actions/media-playback-stop.png</iconset>
    </property>
    <property name="text">
@@ -685,18 +769,96 @@
    </property>
   </action>
   <action name="actionQuit">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset resource="../icons/oxygen.qrc">
+    <iconset resource="../icons/resources.qrc">
      <normaloff>:/themes/oxygen/22x22/actions/application-exit.png</normaloff>:/themes/oxygen/22x22/actions/application-exit.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Quit</string>
    </property>
   </action>
+  <action name="actionSave">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../icons/resources.qrc">
+     <normaloff>:/themes/oxygen/22x22/actions/document-save-as.png</normaloff>:/themes/oxygen/22x22/actions/document-save-as.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="toolTip">
+    <string>Save current chirp</string>
+   </property>
+  </action>
+  <action name="actionSave_all">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../icons/resources.qrc">
+     <normaloff>:/themes/oxygen/22x22/actions/document-save-all.png</normaloff>:/themes/oxygen/22x22/actions/document-save-all.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save all</string>
+   </property>
+  </action>
+  <action name="actionReset_time">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../icons/resources.qrc">
+     <normaloff>:/themes/oxygen/22x22/apps/clock.png</normaloff>:/themes/oxygen/22x22/apps/clock.png</iconset>
+   </property>
+   <property name="text">
+    <string>Reset time</string>
+   </property>
+  </action>
+  <action name="actionReset_detector">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../icons/resources.qrc">
+     <normaloff>:/themes/oxygen/22x22/apps/utilities-system-monitor.png</normaloff>:/themes/oxygen/22x22/apps/utilities-system-monitor.png</iconset>
+   </property>
+   <property name="text">
+    <string>Reset detector</string>
+   </property>
+  </action>
+  <action name="actionClear_all">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../icons/resources.qrc">
+     <normaloff>:/themes/oxygen/22x22/actions/edit-clear-list.png</normaloff>:/themes/oxygen/22x22/actions/edit-clear-list.png</iconset>
+   </property>
+   <property name="text">
+    <string>Clear all</string>
+   </property>
+  </action>
+  <action name="actionAbout_QStones">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../icons/resources.qrc">
+     <normaloff>:/themes/oxygen/16x16/actions/help-about.png</normaloff>:/themes/oxygen/16x16/actions/help-about.png</iconset>
+   </property>
+   <property name="text">
+    <string>About QStones</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="../icons/oxygen.qrc"/>
+  <include location="../icons/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
