Implement throttle control

--- a/ui/mainui.ui
+++ b/ui/mainui.ui
@@ -389,7 +389,7 @@
             </widget>
            </item>
            <item row="2" column="0" colspan="2">
-            <widget class="QCheckBox" name="checkBox">
+            <widget class="QCheckBox" name="cbThrottle">
              <property name="enabled">
               <bool>false</bool>
              </property>
@@ -406,7 +406,7 @@
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="QSpinBox" name="spinBox">
+            <widget class="QSpinBox" name="sbThrottleValue">
              <property name="enabled">
               <bool>false</bool>
              </property>
