--- a/ui/mainui.ui
+++ b/ui/mainui.ui
@@ -773,7 +773,7 @@
   </action>
   <action name="actionQuit">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="icon">
     <iconset resource="../icons/resources.qrc">
@@ -836,7 +836,7 @@
   </action>
   <action name="actionClear_all">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="icon">
     <iconset resource="../icons/resources.qrc">
