--- a/ui/mainui.ui
+++ b/ui/mainui.ui
@@ -60,7 +60,7 @@
              <enum>Qt::LeftToRight</enum>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>3</number>
             </property>
             <widget class="QWidget" name="tab">
              <attribute name="title">
@@ -186,6 +186,53 @@
                 </property>
                 <property name="frameShadow">
                  <enum>QFrame::Raised</enum>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="tab_4">
+             <attribute name="title">
+              <string>SNR</string>
+             </attribute>
+             <layout class="QGridLayout" name="gridLayout_6">
+              <item row="0" column="0" colspan="3">
+               <widget class="QFrame" name="snrFrame">
+                <property name="frameShape">
+                 <enum>QFrame::StyledPanel</enum>
+                </property>
+                <property name="frameShadow">
+                 <enum>QFrame::Raised</enum>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QPushButton" name="pushButton_6">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Save data</string>
+                </property>
+                <property name="icon">
+                 <iconset>
+                  <normalon>:/themes/oxygen/16x16/actions/document-save-as.png</normalon>
+                 </iconset>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QPushButton" name="pushButton_5">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Save plot</string>
+                </property>
+                <property name="icon">
+                 <iconset>
+                  <normalon>:/themes/oxygen/16x16/mimetypes/image-x-generic.png</normalon>
+                 </iconset>
                 </property>
                </widget>
               </item>
@@ -681,7 +728,7 @@
      <x>0</x>
      <y>0</y>
      <width>1216</width>
-     <height>20</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Device">
