--- a/ui/mainui.ui
+++ b/ui/mainui.ui
@@ -60,7 +60,7 @@
              <enum>Qt::LeftToRight</enum>
             </property>
             <property name="currentIndex">
-             <number>2</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="tab_2">
              <attribute name="title">
@@ -579,7 +579,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_9">
              <property name="text">
-              <string>N0 BW</string>
+              <string>W BW</string>
              </property>
             </widget>
            </item>
@@ -611,7 +611,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>S0 BW</string>
+              <string>N BW</string>
              </property>
             </widget>
            </item>
